--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/koa": "^2.0.43",
     "@types/node": "^8.5.2",
+    "koa": "^2.4.1",
+    "koa-static": "^4.0.2",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
