--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/koa": "^2.0.43",
     "@types/node": "^8.5.2",
     "koa": "^2.4.1",
+    "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
