--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/koa": "^2.0.43",
+    "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.2",
     "koa": "^2.4.1",
     "koa-body-parser": "^1.1.2",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
+    "nedb": "^1.8.0",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
