--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nedb": "^1.8.0",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
+    "twitter": "^1.7.1",
     "typescript": "^2.6.2",
     "vue": "^2.5.13",
     "webpack": "^3.10.0"
