--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/koa": "^2.0.43",
     "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.2",
+    "axios": "^0.17.1",
     "koa": "^2.4.1",
     "koa-body-parser": "^1.1.2",
     "koa-router": "^7.3.0",
