--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/nedb": "^1.8.5",
     "@types/node": "^8.5.2",
     "axios": "^0.17.1",
+    "commander": "^2.12.2",
     "koa": "^2.4.1",
     "koa-body-parser": "^1.1.2",
     "koa-router": "^7.3.0",
